<resources>
    <string name="app_name">Reinhardt_Gong</string>

    <string name="hintSerialNumber">Enter Serial Number</string>
    <string name="hintSystolic">Enter Systolic Pressure</string>
    <string name="hintDiastolic">Enter Diastolic Pressure</string>
    <string name="btnAddReading">Add Reading</string>
    <string name="enterNewSerialNumber">Enter New Serial Number</string>
    <string name="enterNewSystolic">Enter New Systolic Pressure</string>
    <string name="enterNewDiastolic">Enter New Diastolic Pressure</string>
    <string name="btnUpdate">Update</string>
    <string name="btnDelete">Delete</string>
    <string name="done">Done</string>

    <string name="buttonShowReports">Show Reports</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="tv_month">Month-to-date average readings for Nov 2019</string>
    <string name="tv_DSN_text">Device Serial Number:</string>
    <string name="tv_systolic_text">Systolic Reading:</string>
    <string name="tv_diastolic_text">Diastolic Reading:</string>
    <string name="tv_avgCondition_text">Average Condition</string>

    <array name="familyMember">
        <item>father@home.com</item>
        <item>mother@home.com</item>
        <item>grandma@home.com</item>
        <item>grandpa@home.com</item>
    </array>

</resources>