<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextSerialNumber2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/hintSerialNumber"
        android:textColor="@color/common_google_signin_btn_text_dark_disabled"
        android:focusable="false"
        android:cursorVisible="false"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextSystolic2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintSystolic"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editTextDiastolic2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintDiastolic"
        android:inputType="numberDecimal" />


    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnUpdate" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDelete" />


</LinearLayout>
