<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/spinnerFamily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/familyMember" />


    <EditText
        android:id="@+id/editTextSystolic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintSystolic"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editTextDiastolic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintDiastolic"
        android:inputType="numberDecimal" />


    <Button
        android:id="@+id/buttonAddReading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAddReading" />


    <Button
        android:id="@+id/buttonShowReports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonShowReports" />


    <ListView
        android:id="@+id/lvReadings"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />




</LinearLayout>