<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/edge"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_month_former"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_month"
            android:textColor="@color/textPrimaryColor"
            android:textStyle="bold"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/tv_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textPrimaryColor"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_FM_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edge"
            android:text="@string/tv_FM_text"
            android:textColor="@color/textPrimaryColor"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/tv_FM"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edge"
            android:textColor="@color/textPrimaryColor"
            android:padding="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_systolic_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edge"
            android:text="@string/tv_systolic_text"
            android:textColor="@color/textPrimaryColor"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/tv_systolic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edge"
            android:textColor="@color/textPrimaryColor"
            android:padding="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_diastolic_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edge"
            android:text="@string/tv_diastolic_text"
            android:textColor="@color/textPrimaryColor"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/tv_diastolic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edge"
            android:textColor="@color/textPrimaryColor"
            android:padding="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_avgCondition_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/edge"
            android:text="@string/tv_avgCondition_text"
            android:textColor="@color/textPrimaryColor"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/tv_avgCondition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edge"
            android:textColor="@color/textPrimaryColor"
            android:padding="5dp"/>
    </LinearLayout>


</LinearLayout>